Removed extra stylesheets from config import. Framework optimization

--- a/app/assets/stylesheets/framework/spaces.css.sass
+++ b/app/assets/stylesheets/framework/spaces.css.sass
@@ -1,3 +1,5 @@
+@import 'config'
+
 /**
  * Should be used to modify the default spacing between objects (not between nodes of the same object)
  * a, t, r, b, l, h, v = all,top,right,bottom,left,horizontal,vertical
