--- a/app/assets/stylesheets/futurico-dark.css.scss
+++ b/app/assets/stylesheets/futurico-dark.css.scss
@@ -1,4 +1,5 @@
+//= require framework/base
 //= require layouts/futurico
-//= require_tree ./library
+//= require_tree ./library/dark
 //= require_tree ./modules/dark
 
