--- a/app/assets/stylesheets/layouts/futurico.css.sass
+++ b/app/assets/stylesheets/layouts/futurico.css.sass
@@ -2,8 +2,8 @@
 
 body
   background: #292b30 image-url('futurico/background-noise.png')
-  color: $base-font-color
-  font: #{$base-font-size}/1.231 $base-font
+  color: #000
+  font: 12px/1.231 $base-font
   margin: 0
   padding: 0
   .background-light
