--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -53,3 +53,6 @@
                 .mll.pll
                   =render :partial => "static/futurico/datepicker"
 
+            .mbl.pbl.clearfix
+              =render :partial => "static/futurico/pagination"
+
