--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -54,5 +54,8 @@
                   =render :partial => "static/futurico/datepicker"
 
             .mbl.pbl.clearfix
-              =render :partial => "static/futurico/pagination"
+              .left.mrl.prl
+                =render :partial => "static/futurico/pagination"
+              .left.mrl.prl
+                =render :partial => "static/futurico/comments"
 
