--- a/app/assets/stylesheets/modules/dark/currently-playing.css.sass
+++ b/app/assets/stylesheets/modules/dark/currently-playing.css.sass
@@ -34,6 +34,7 @@ $song-time-width: 50px
 
   .song-info
     padding-top: 8px
+    position: relative
     font-size: 10px
 
   // Song track
@@ -52,13 +53,13 @@ $song-time-width: 50px
       top: -1px
 
   .song-time
-    bottom: 9px
     position: absolute
+    top: 7px
     width: $song-time-width
     &.start
-      left: 5px
+      left: -8px
       text-align: right
     &.end
-      right: 5px
+      right: -7px
       text-align: left
 
