Chosen JS for custom selects implemented. Started implementing slideshow

--- a/app/views/static/futurico/_selects.html.haml
+++ b/app/views/static/futurico/_selects.html.haml
@@ -1,16 +1,9 @@
 .mbl
-  .select.idle
-    .selected
-      Bill Hampton
-      %span.icon
-    .options
-      %ul.stack
-        %li.option Aaliyah
-        %li.option Barbra
-        %li.option Azura
-        %li.option Babs
-        %li.option Fox
-        -# %li.option Bill
-        -# %li.option John
-        -# %li.option Kate
+  %select.select
+    %option
+    %option{:value => "Aaliyah"} Aaliyah
+    %option{:value => "Barbara"} Barbara
+    %option{:value => "Azura"} Azura
+    %option{:value => "Babs"} Babs
+    %option{:value => "Fox"} Fox
 
