--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -4,6 +4,7 @@
     %meta{:charset => "UTF-8"}
       %title Scaffy framework
       = stylesheet_link_tag "futurico-dark"
+      = javascript_include_tag "application"
   %body
     %img.background-light{:src => "/assets/futurico/background-light.png"}
 
@@ -58,4 +59,7 @@
                 =render :partial => "static/futurico/pagination"
               .left.mrl.prl
                 =render :partial => "static/futurico/comments"
+
+            .mbl.pbl.clearfix
+              =render :partial => "static/futurico/slideshow"
 
