--- a/app/views/static/futurico/_slideshow.html.haml
+++ b/app/views/static/futurico/_slideshow.html.haml
@@ -1,6 +1,10 @@
 .slideshow
-  %ul.slideshow-slides
-    %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide.jpg')"}
-    %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide.jpg')"}
-    %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide.jpg')"}
+  .slideshow-slides-wrapper
+    %ul.slideshow-slides
+      %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide.jpg')"}
+      %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide-2.jpg')"}
+      %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide-3.jpg')"}
+
+  .show-slide.prev
+  .show-slide.next
 
