--- a/app/views/static/futurico/_slideshow.html.haml
+++ b/app/views/static/futurico/_slideshow.html.haml
@@ -2,8 +2,14 @@
   .slideshow-slides-wrapper
     %ul.slideshow-slides
       %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide.jpg')"}
+        .slide-description
+          Elephants never forget
       %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide-2.jpg')"}
+        .slide-description
+          Elephants never forget
       %li.each-slide{:style => "background-image: url('/assets/futurico/slideshow/test-slide-3.jpg')"}
+        .slide-description
+          Elephants never forget
 
   .show-slide.prev
   .show-slide.next
