--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -61,5 +61,8 @@
                 =render :partial => "static/futurico/comments"
 
             .mbl.pbl.clearfix
-              =render :partial => "static/futurico/slideshow"
+              .left.mrl.prl
+                =render :partial => "static/futurico/slideshow"
+              .left.mll.pll
+                =render :partial => "static/futurico/circle-banner"
 
