Polishing buttons. Circle banner ear

--- a/app/assets/stylesheets/modules/dark/circle-banner.css.sass
+++ b/app/assets/stylesheets/modules/dark/circle-banner.css.sass
@@ -21,6 +21,14 @@
     margin-top: 15px
     padding-top: 10px
 
+  .ear
+    background: image-url('futurico/circle-banner/ear.png') 0 0 no-repeat
+    height: 22px
+    left: 27px
+    position: absolute
+    top: 8px
+    width: 22px
+
   // Pullers
   .banner-pull-l
     clear: both
