--- a/app/views/static/futurico/_buttons.html.haml
+++ b/app/views/static/futurico/_buttons.html.haml
@@ -19,3 +19,8 @@
 .mbl
   %a.button.positive.disabled{:href => "#"} Disabled button
 
+.mbl
+  %a.button-huge.positive{:href => "#"}
+    SIGN IN
+    %span.button-description One minute
+
