--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -66,3 +66,6 @@
               .left.mll.pll
                 =render :partial => "static/futurico/circle-banner"
 
+            .mbl.pbl.clearfix
+              =render :partial => "static/futurico/appreciate"
+
