Appreciate as links

--- a/app/assets/stylesheets/modules/dark/appreciate.css.sass
+++ b/app/assets/stylesheets/modules/dark/appreciate.css.sass
@@ -2,6 +2,7 @@
 
 .appreciate
   background: image-url('futurico/appreciate/splash.png') 0 0 no-repeat
+  display: block
   cursor: pointer
   font-size: 13px
   height: 97px
