--- a/app/views/static/futurico/_appreciate.html.haml
+++ b/app/views/static/futurico/_appreciate.html.haml
@@ -1,6 +1,6 @@
 .left.mrl.prl
-  .appreciate
+  %a.appreciate{:href => "#"}
 
 .left.mrl.prl
-  .appreciate.firm
+  %a.appreciate.firm{:href => "#"}
 
