Appreciate JS & Tnx state

--- a/app/assets/stylesheets/modules/dark/appreciate.css.sass
+++ b/app/assets/stylesheets/modules/dark/appreciate.css.sass
@@ -17,3 +17,7 @@
   &.firm
     background-image: image-url('futurico/appreciate/splash-firm.png')
 
+  // Thank you state
+  &.tnx
+    background: image-url('futurico/appreciate/tnx.png') 0 0 no-repeat
+
