--- a/app/views/static/futurico/_appreciate.html.haml
+++ b/app/views/static/futurico/_appreciate.html.haml
@@ -1,6 +1,6 @@
 .left.mrl.prl
-  %a.appreciate{:href => "#"}
+  .appreciate
 
 .left.mrl.prl
-  %a.appreciate.firm{:href => "#"}
+  .appreciate.firm
 
