Equalizer slider mechanics

--- a/app/assets/stylesheets/modules/dark/equalizer.css.sass
+++ b/app/assets/stylesheets/modules/dark/equalizer.css.sass
@@ -30,13 +30,12 @@ $eq-height: 114px
     +box-shadow((inset 1px 0 0 rgba(#fff, .4), 1px 1px 1px rgba(#000, .4)))
     +horizontal-gradient(#6c901b, #91b73c)
 
-  .slider
+  .ui-slider-handle
     background: image-url('futurico/equalizer/slider.png') 5px 0 no-repeat
     cursor: pointer
     height: 16px
     left: -6px
     position: absolute
-    top: -8px
     width: 17px
     &:hover,
     &:focus
