--- a/app/views/static/futurico/_equalizer.html.haml
+++ b/app/views/static/futurico/_equalizer.html.haml
@@ -1,59 +1,49 @@
 .equalizer.clearfix
   .bar
-    .scale{:style => "height: 35%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 46%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 22%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 48%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 61%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 65%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 78%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 100%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 62%"}
-      %a.slider{:href => "#"}
+    .scale
 
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 0%"}
-      %a.slider{:href => "#"}
+    .scale
 
