--- a/app/assets/stylesheets/modules/dark/equalizer.css.sass
+++ b/app/assets/stylesheets/modules/dark/equalizer.css.sass
@@ -35,6 +35,7 @@ $eq-height: 114px
     cursor: pointer
     height: 16px
     left: -6px
+    margin-bottom: -8px
     position: absolute
     width: 17px
     &:hover,
