--- a/app/views/static/futurico/_equalizer.html.haml
+++ b/app/views/static/futurico/_equalizer.html.haml
@@ -1,49 +1,49 @@
 .equalizer.clearfix
   .bar
-    .scale
+    .scale{:style => "height: 35px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 46px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 22px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 48px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 61px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 65px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 78px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 100px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 62px"}
 
   .bar-delimiter
 
   .bar
-    .scale
+    .scale{:style => "height: 0px"}
 
