--- a/app/assets/stylesheets/modules/dark/datepicker.css.sass
+++ b/app/assets/stylesheets/modules/dark/datepicker.css.sass
@@ -3,16 +3,17 @@
 .datepicker-placeholder
   position: relative
 
-.datepicker
+.ui-datepicker
   background-color: #141517
   color: #a8a8a8
   padding: 30px
   position: absolute
   +border-radius(2px)
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
+  +user-select(none)
 
 // Datepicker calendar
-.datepicker-calendar
+.ui-datepicker-calendar
   border-collapse: separate
 
   td
@@ -21,15 +22,20 @@
     padding: 5px 7px
     text-align: center
     &:hover,
-    &:focus
+    &.ui-datepicker-current-day
       border-color: #759827
-    &.inactive
+
+    &.ui-state-disabled
       border-color: transparent
       cursor: default
       color: #565656
-    &.today
-      border-color: #759827
+
+    &.ui-datepicker-today
+      background-color: #243205
       color: #759827
+
+  a
+    text-decoration: none
 
   th
     cursor: default
@@ -38,7 +44,7 @@
     text-transform: uppercase
 
 // Datepicker controls
-.datepicker-header
+.ui-datepicker-header
   border-bottom: 1px solid #d6d6d6
   cursor: default
   margin: 0 6px 10px
@@ -61,23 +67,25 @@
       width: 4px
       +border-radius(50%)
 
-  .datepicker-back
+  .ui-datepicker-prev
     background: image-url('futurico/datepicker/back.png') 5px 3px no-repeat
     bottom: 9px
     cursor: pointer
+    font-size: 1px
     height: 16px
     left: -4px
     position: absolute
+    text-indent: -999em
     width: 16px
     &:hover,
     &:focus
       background-position: 5px -13px
-    &.disabled
+    &.ui-state-disabled
       background-position: 5px -29px
       cursor: default
 
-  .datepicker-forward
-    @extend .datepicker-back
+  .ui-datepicker-next
+    @extend .ui-datepicker-prev
     background-image: image-url('futurico/datepicker/forward.png')
     left: auto
     right: -5px
