--- a/app/assets/stylesheets/modules/dark/slideshow.css.sass
+++ b/app/assets/stylesheets/modules/dark/slideshow.css.sass
@@ -15,6 +15,7 @@ $slide-width: 272px
   position: relative
   +border-radius(8px)
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
+  +user-select(none)
 
   .slideshow-slides-wrapper
     overflow: hidden
@@ -58,4 +59,5 @@ $slide-width: 272px
     width: 100%
     +border-radius(0 0 5px 5px)
     +box-sizing
+    +user-select(text)
 
