--- a/app/assets/stylesheets/modules/dark/starbar.css.sass
+++ b/app/assets/stylesheets/modules/dark/starbar.css.sass
@@ -5,6 +5,7 @@
   display: inline-block
   padding: 10px
   +border-radius(8px)
+  +box-shadow((inset 0 0 0 1px rgba(#fff, .3), 0 1px 1px rgba(#000, .4)))
 
   .star
     background: image-url('futurico/starbar/star.png') 0 0 no-repeat
