Text indent fix for datepicker

--- a/app/assets/stylesheets/modules/dark/datepicker.css.sass
+++ b/app/assets/stylesheets/modules/dark/datepicker.css.sass
@@ -74,6 +74,7 @@
     font-size: 1px
     height: 16px
     left: -4px
+    overflow: hidden
     position: absolute
     text-indent: -999em
     width: 16px
@@ -114,6 +115,7 @@
   cursor: pointer
   font-size: 1px
   height: 27px
+  overflow: hidden
   position: absolute
   text-indent: -999em
   right: 0
