Datepicker format polishing

--- a/app/assets/stylesheets/modules/dark/datepicker.css.sass
+++ b/app/assets/stylesheets/modules/dark/datepicker.css.sass
@@ -96,15 +96,16 @@
   position: absolute
   right: 0
   top: 0
+  width: 100%
   .ui-datepicker-current
     background: none
     border: none
     color: #555
     cursor: pointer
     font: italic 12px $firm-font
-    margin-top: 8px
+    margin: 8px -15px 0 0
     position: absolute
-    right: 122px
+    right: 50%
     &:hover
       color: #999
 
