--- a/app/views/static/futurico/_tabbox.html.haml
+++ b/app/views/static/futurico/_tabbox.html.haml
@@ -3,6 +3,7 @@
     %li.active Option 1
     %li Option 2
 
+  -# Option 1 tabbox
   .tabbox-stuff.clearfix
     %ul.tabbox-navigation
       %li.archive
@@ -19,4 +20,16 @@
           .preloader
 
         %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
+
+  -# Option 2 tabbox
+  .tabbox-stuff.clearfix
+    %ul.tabbox-navigation
+      %li.archive.active
+      %li.messages
+
+    .last-col
+      .tabbox-content
+        .heading
+          %h2
+            Archive
 
