Datepicker fix for jquery ui. Display none added by default

--- a/app/assets/stylesheets/modules/dark/datepicker.css.sass
+++ b/app/assets/stylesheets/modules/dark/datepicker.css.sass
@@ -6,6 +6,7 @@
 .ui-datepicker
   background-color: #141517
   color: #a8a8a8
+  display: none
   padding: 30px
   position: absolute
   +border-radius(2px)
