--- a/app/views/static/futurico/_tabbox.html.haml
+++ b/app/views/static/futurico/_tabbox.html.haml
@@ -31,5 +31,10 @@
       .tabbox-content
         .heading
           %h2
-            Archive
+            Archive title goes here
+            %span.status-message.positive Success message
+
+          .preloader
+
+        %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
 
