Added IE8 support with PIE.htc

--- a/app/assets/stylesheets/modules/dark/commutator.css.sass
+++ b/app/assets/stylesheets/modules/dark/commutator.css.sass
@@ -9,6 +9,7 @@
   position: relative
   +border-radius(20px)
   +user-select(none)
+  behavior: url('/assets/vendor/PIE.htc')
 
   // Commutator states
   &.on
