--- a/app/assets/stylesheets/framework/mixins.css.sass
+++ b/app/assets/stylesheets/framework/mixins.css.sass
@@ -27,6 +27,7 @@
   background-image:     -ms-linear-gradient(top, $start-color, $end-color)
   background-image:      -o-linear-gradient(top, $start-color, $end-color)
   background-image:         linear-gradient(top, $start-color, $end-color)
+  -pie-background: linear-gradient($start-color, $end-color)
 
 =horizontal-gradient($start-color, $end-color)
   background: $end-color
