--- a/app/assets/stylesheets/modules/dark/circle-banner.css.sass
+++ b/app/assets/stylesheets/modules/dark/circle-banner.css.sass
@@ -12,6 +12,7 @@
   width: 165px
   +border-radius(50%)
   +box-shadow(0 1px 0 rgba(#fff, .06))
+  behavior: url('/assets/vendor/PIE.htc')
   .banner-inner
     padding-top: 20px
 
