--- a/app/assets/stylesheets/modules/dark/currently-playing.css.sass
+++ b/app/assets/stylesheets/modules/dark/currently-playing.css.sass
@@ -10,6 +10,7 @@ $song-time-width: 50px
   +box-shadow((0 1px 0 rgba(#fff, .5), 0 -1px 0 #000))
   +text-shadow(0 1px 0 rgba(#fff, .5))
   +vertical-gradient(#dfe2ad, #d1d395)
+  behavior: url('/assets/vendor/PIE.htc')
   &:after
     background-color: rgba(#fff, .4)
     content: ''
