--- a/app/assets/stylesheets/modules/dark/pagination.css.sass
+++ b/app/assets/stylesheets/modules/dark/pagination.css.sass
@@ -15,6 +15,7 @@
     +border-radius(50%)
     +box-shadow((inset 1px 1px 0 rgba(#000, .3), 1px 1px 0 rgba(#fff, .1)))
     +text-shadow(1px 1px 0 rgba(#000, .4))
+    behavior: url('/assets/vendor/PIE.htc')
     &:hover
       background-color: #3f4147
     &.active
