--- a/app/assets/stylesheets/modules/dark/tabbox.css.sass
+++ b/app/assets/stylesheets/modules/dark/tabbox.css.sass
@@ -47,13 +47,14 @@
       background-repeat: no-repeat
       cursor: pointer
       height: 64px
+      position: relative
       +user-select(none)
       &:hover
         background-color: #f0f0f0
         +box-shadow(inset 0 0 3px rgba(#000, .2))
       &:active
         background-color: #ddd
-      &.active
+      &.ui-state-active
         background-color: #fff
         +box-shadow(3px 3px 5px -3px rgba(#000, .4))
       &.archive
@@ -62,6 +63,11 @@
         background-image: image-url('futurico/tabbox/navigation-messages.png')
       &.cloud
         background-image: image-url('futurico/tabbox/navigation-cloud.png')
+      > a
+        display: block
+        height: 100%
+        position: absolute
+        width: 100%
 
   // Tabbox content area
   .tabbox-content
@@ -71,6 +77,9 @@
     position: relative
     z-index: 3
     +box-shadow(3px 3px 5px -3px rgba(#000, .4))
+
+  .ui-tabs-hide
+    display: none
 
   .heading
     border-bottom: 1px solid #e9e9e9
