Ear for current header navigation item

--- a/app/assets/stylesheets/modules/dark/header.css.sass
+++ b/app/assets/stylesheets/modules/dark/header.css.sass
@@ -26,27 +26,37 @@
 
   // Main site navigation
   .navigation
-    font-family: $firm-font
-    font-size: 14px
-    letter-spacing: 1px
+    font-family: "Helvetica Neue", $base-font
+    font-size: 13px
     text-align: center
     text-transform: uppercase
     li
       display: inline-block
+      height: 16px
       position: relative
+      top: 2px
       &:after
         background: #84aa30
         content: ''
         height: 4px
         position: absolute
         right: -4px
-        top: 6px
+        top: 5px
         width: 4px
         +border-radius(50%)
       &:last-child
         &:after
           display: none
       &.current
+        &:before
+          background: image-url('futurico/header/ear.png') 0 0 no-repeat
+          bottom: -19px
+          content: ''
+          height: 8px
+          left: 50%
+          margin-left: -7px
+          position: absolute
+          width: 14px
         a
           color: #94be38
     a
