Helvetica Neue in stickers

--- a/app/assets/stylesheets/modules/dark/sticker.css.sass
+++ b/app/assets/stylesheets/modules/dark/sticker.css.sass
@@ -8,16 +8,17 @@
 
   &.percent
     background: image-url('futurico/sticker/percent.png') 0 0 no-repeat
-    font: bold 46px $firm-font
-    height: 104px
-    padding-top: 20px
+    font: bold 42px "Helvetica Neue", $base-font
+    height: 100px
+    letter-spacing: 1px
+    padding-top: 24px
     width: 124px
 
   &.pack
     background: image-url('futurico/sticker/pack.png') 0 0 no-repeat
-    font: bold 38px $firm-font
-    height: 86px
-    padding-top: 11px
+    font: bold 38px "Helvetica Neue", $base-font
+    height: 84px
+    padding-top: 13px
     width: 97px
     .sticker-label
       background-color: #18657b
@@ -27,7 +28,7 @@
       padding: 3px 10px
       position: relative
       text-transform: uppercase
-      top: -22px
+      top: -26px
       +border-radius(20px)
       +box-shadow(1px 1px 0 rgba(#fff, .1))
 
