--- a/app/views/static/futurico/_pagination.html.haml
+++ b/app/views/static/futurico/_pagination.html.haml
@@ -1,10 +1,14 @@
 .clearfix
   .left.mrl.prl
-    %ul.pagination.clearfix
-      %li.active<> 1
-      %li<> 2
-      %li<> 3
-      %li<> 4
+    %ul.pagination.clearfix#pagination
+      %li.active
+        %a{:href => "#pagination"}<> 1
+      %li
+        %a{:href => "#pagination"}<> 2
+      %li
+        %a{:href => "#pagination"}<> 3
+      %li
+        %a{:href => "#pagination"}<> 4
 
   .left
     .pagination.clearfix
