--- a/app/views/static/futurico/_checkboxes.html.haml
+++ b/app/views/static/futurico/_checkboxes.html.haml
@@ -1,27 +1,20 @@
 -# Disk checkboxes set
-.mbm
-  .checkbox.disk
-    Disk checkbox
+.radiogroup
+  .mbm
+    .radio
+      Radio 1
 
-.mbl
-  .checkbox.disk.checked
-    Disk checkbox checked
+  .mbl
+    .radio.checked
+      Radio 2
 
 -# Square checkboxes set
 .mbm
-  .checkbox.square
-    Square checkbox
-
-.mbl
-  .checkbox.square.checked
-    Square checkbox checked
+  .checkbox
+    Checkbox
 
 -# Light Square checkboxes set
 .mbm
-  .checkbox-light.square
+  .checkbox-light
     Light checkbox
-
-.mbm
-  .checkbox-light.square.checked
-    Light checkbox checked
 
