--- a/app/assets/stylesheets/framework/reset.css.sass
+++ b/app/assets/stylesheets/framework/reset.css.sass
@@ -4,6 +4,30 @@
   outline: none
   font-size: 1em
 
+html
+  -webkit-text-size-adjust: 100%
+  -ms-text-size-adjust: 100%
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section
+  display: block
+
+audio, canvas, video
+  display: inline-block
+  *display: inline
+  *zoom: 1
+
+audio:not([controls])
+  display: none
+
 img, iframe, fieldset, object, table
   border: none
 
@@ -27,9 +51,41 @@ table
 th, h1, h2, h3, h4, h5, h6
   font-weight: normal
 
-header, footer, aside, section, article, hgroup, nav
-  display: block
+button,
+input,
+select,
+textarea
+  margin: 0
+  font-size: 100%
+  vertical-align: middle
 
-button::-moz-focus-inner, input::-moz-focus-inner
+button, input
+  *overflow: visible
+  line-height: normal
+
+button::-moz-focus-inner,
+input::-moz-focus-inner
   border: 0
   padding: 0
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"]
+  cursor: pointer
+  -webkit-appearance: button
+
+input[type="search"]
+  -webkit-appearance: textfield
+  -webkit-box-sizing: content-box
+  -moz-box-sizing: content-box
+  box-sizing: content-box
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button
+  -webkit-appearance: none
+
+textarea
+  overflow: auto
+  vertical-align: top
+
