--- a/app/assets/stylesheets/modules/dark/site-info.css.sass
+++ b/app/assets/stylesheets/modules/dark/site-info.css.sass
@@ -4,7 +4,7 @@
   padding: 25px 0 0 25px
   text-align: center
   +text-shadow(0 1px 0 rgba(#fff, .06))
-  .site-name
+  .sitename
     font-weight: bold
     margin-bottom: 5px
     text-transform: uppercase
