--- a/app/assets/stylesheets/modules/dark/starbar.css.sass
+++ b/app/assets/stylesheets/modules/dark/starbar.css.sass
@@ -3,6 +3,7 @@
 .starbar
   background: #94eaf3 image-url('futurico/starbar/background.png') 0 0 repeat-x
   display: inline-block
+  height: 16px
   padding: 10px
   +border-radius(8px)
   +box-shadow((inset 0 0 0 1px rgba(#fff, .3), 0 1px 1px rgba(#000, .4)))
