Submit inside text input. Added default skin font-family to all form tags

--- a/app/assets/stylesheets/framework/reset.css.sass
+++ b/app/assets/stylesheets/framework/reset.css.sass
@@ -1,3 +1,5 @@
+@import 'config'
+
 *
   padding: 0
   margin: 0
@@ -56,6 +58,7 @@ input,
 select,
 textarea
   margin: 0
+  font-family: $base-font
   font-size: 100%
   vertical-align: middle
 
