Applu PIE on tabbox, starbar, sticker and login block

--- a/app/assets/stylesheets/modules/dark/starbar.css.sass
+++ b/app/assets/stylesheets/modules/dark/starbar.css.sass
@@ -7,6 +7,7 @@
   padding: 10px
   +border-radius(8px)
   +box-shadow((inset 0 0 0 1px rgba(#fff, .3), 0 1px 1px rgba(#000, .4)))
+  behavior: url('/assets/vendor/PIE.htc')
 
   .star
     background: image-url('futurico/starbar/star.png') 0 0 no-repeat
