--- a/app/assets/stylesheets/modules/dark/sticker.css.sass
+++ b/app/assets/stylesheets/modules/dark/sticker.css.sass
@@ -31,4 +31,5 @@
       top: -26px
       +border-radius(20px)
       +box-shadow(1px 1px 0 rgba(#fff, .1))
+      behavior: url('/assets/vendor/PIE.htc')
 
