--- a/app/assets/stylesheets/modules/dark/login-block.css.sass
+++ b/app/assets/stylesheets/modules/dark/login-block.css.sass
@@ -7,6 +7,7 @@
   position: relative
   +border-radius(8px)
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
+  behavior: url('/assets/vendor/PIE.htc')
 
   .login-ear
     background: image-url('futurico/login-block/ear.png') 0 0 no-repeat
