--- a/app/assets/stylesheets/modules/dark/tabbox.css.sass
+++ b/app/assets/stylesheets/modules/dark/tabbox.css.sass
@@ -19,17 +19,18 @@
     +box-shadow(inset 0 1px 0 rgba(#fff, .1))
     +vertical-gradient(#5b5d62, #4b4d51)
     +user-select(none)
+    behavior: url('/assets/vendor/PIE.htc')
     &:hover
       +vertical-gradient(#64656b, #595a5f)
     &:active
       +box-shadow((inset 0 1px 0 rgba(#fff, .15), inset 0 1px 5px rgba(#000, .4)))
       +vertical-gradient(#5b5d62, #4b4d51)
     &.active
-      background: #e5e5e5
       color: #404040
       padding-bottom: 12px
       +box-shadow(inset 0 1px #fff)
       +text-shadow(0 1px 0 #fff)
+      +vertical-gradient(#e7e7e7, #e5e5e5)
 
 // Tabbox main wrap area with solid background where everything is placed
 .tabbox-stuff
@@ -37,6 +38,7 @@
   padding: 14px
   position: relative
   +border-radius(0 10px 10px)
+  behavior: url('/assets/vendor/PIE.htc')
 
 // Tabbox icons to navigate inside (sub-navigation)
 .tabbox-navigation
