--- a/app/assets/stylesheets/modules/dark/commutator.css.sass
+++ b/app/assets/stylesheets/modules/dark/commutator.css.sass
@@ -12,11 +12,17 @@
   behavior: url('/assets/vendor/PIE.htc')
 
   // Commutator states
+  // ===============================================
   &.on
     color: #3e5706
     +box-shadow((inset 1px 1px 0 rgba(#fff, .4), 1px 1px 1px rgba(#000, .3)))
     +text-shadow(0 1px rgba(#fff, .2))
     +vertical-gradient(#aed160, #6c901b)
+    .is
+      &.on
+        left: 0
+      &.off
+        margin-right: 24px
 
   &.off
     background-color: #000
@@ -28,7 +34,8 @@
       &.off
         margin-right: -3px
 
-  // On Off
+  // On Off switchers
+  // ===============================================
   .is
     margin: 0 2px
     padding: 6px 30px 3px 10px
@@ -36,10 +43,8 @@
     width: 100%
     +box-sizing
     +transition((left .2s linear, margin .2s linear))
-
     &.off
       background: image-url('futurico/commutator/slider.png') left 3px no-repeat
-      margin-right: 24px
       right: -100%
       padding-left: 24px
       position: absolute
