Firefox user-select: none

--- a/app/assets/stylesheets/framework/mixins.css.sass
+++ b/app/assets/stylesheets/framework/mixins.css.sass
@@ -69,7 +69,7 @@
   transform:         $properties
 
 =user-select($properties)
-  -webkit-user-select:      $properties
-  -moz-user-select:    -moz-$properties
-  user-select:              $properties
+  -webkit-user-select: $properties
+  -moz-user-select:    $properties
+  user-select:         $properties
 
