Vendor prefixes refactoring

--- a/app/assets/stylesheets/modules/dark/circle-banner.css.sass
+++ b/app/assets/stylesheets/modules/dark/circle-banner.css.sass
@@ -2,6 +2,7 @@
 
 .circle-banner
   background-color: #141517
+  border-radius: 50%
   color: #fff
   font: italic 11px $firm-font
   height: 165px
@@ -10,7 +11,6 @@
   position: relative
   text-align: center
   width: 165px
-  +border-radius(50%)
   +box-shadow(0 1px 0 rgba(#fff, .06))
   behavior: url('/assets/vendor/PIE.htc')
   .banner-inner
