--- a/app/assets/stylesheets/modules/dark/header.css.sass
+++ b/app/assets/stylesheets/modules/dark/header.css.sass
@@ -37,13 +37,13 @@
     top: 2px
     &:after
       background: #84aa30
+      border-radius: 50%
       content: ''
       height: 4px
       position: absolute
       right: -4px
       top: 43%
       width: 4px
-      +border-radius(50%)
     &:last-child
       &:after
         display: none
