--- a/app/assets/stylesheets/modules/dark/progressbar.css.sass
+++ b/app/assets/stylesheets/modules/dark/progressbar.css.sass
@@ -4,5 +4,5 @@
   color: #fff
   margin-bottom: 6px
   text-align: right
-  +text-shadow(0 1px 0 rgba(#000, .5))
+  text-shadow: 0 1px 0 rgba(#000, .5)
 
