--- a/app/assets/stylesheets/modules/dark/site-info.css.sass
+++ b/app/assets/stylesheets/modules/dark/site-info.css.sass
@@ -3,7 +3,7 @@
 .site-info
   padding: 25px 0 0 25px
   text-align: center
-  +text-shadow(0 1px 0 rgba(#fff, .06))
+  text-shadow: 0 1px 0 rgba(#fff, .06)
   .sitename
     font-weight: bold
     margin-bottom: 5px
