--- a/app/assets/stylesheets/framework/mixins.css.sass
+++ b/app/assets/stylesheets/framework/mixins.css.sass
@@ -1,17 +1,13 @@
 =animation($properties)
   -webkit-animation: $properties
   -moz-animation:    $properties
+  -ms-animation:     $properties
+  -o-animation:      $properties
   animation:         $properties
-
-=border-radius($properties)
-  -webkit-border-radius: $properties
-  -moz-border-radius:    $properties
-  border-radius:         $properties
 
 =box-shadow($properties)
   -webkit-box-shadow: $properties
   -moz-box-shadow:    $properties
-  -o-box-shadow:      $properties
   box-shadow:         $properties
 
 =box-sizing
@@ -51,25 +47,23 @@
   &::-webkit-input-placeholder
     color: $color
 
-=text-shadow($properties)
-  -webkit-text-shadow: $properties
-  -moz-text-shadow:    $properties
-  text-shadow:         $properties
-
 =transition($properties)
   -webkit-transition: $properties
   -moz-transition:    $properties
+  -ms-transition:     $properties
   -o-transition:      $properties
   transition:         $properties
 
 =transform($properties)
   -webkit-transform: $properties
   -moz-transform:    $properties
+  -ms-transform:     $properties
   -o-transform:      $properties
   transform:         $properties
 
 =user-select($properties)
   -webkit-user-select: $properties
   -moz-user-select:    $properties
+  -ms-user-select:     $properties
   user-select:         $properties
 
