--- a/app/assets/stylesheets/modules/dark/comments.css.sass
+++ b/app/assets/stylesheets/modules/dark/comments.css.sass
@@ -2,12 +2,12 @@
 
 .comments
   background-color: #141517
+  border-radius: 2px
   color: #fff
   display: inline-block
   font: italic 11px $firm-font
   padding: 4px 7px 6px
   position: relative
-  +border-radius(2px)
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
 
   .ear
