--- a/app/assets/stylesheets/modules/dark/datepicker.css.sass
+++ b/app/assets/stylesheets/modules/dark/datepicker.css.sass
@@ -5,11 +5,11 @@
 
 .ui-datepicker
   background-color: #141517
+  border-radius: 2px
   color: #a8a8a8
   display: none
   padding: 30px
   position: absolute
-  +border-radius(2px)
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
   +user-select(none)
 
@@ -60,13 +60,13 @@
     position: relative
     &:before
       background: #99c043
+      border-radius: 50%
       content: ''
       height: 4px
       left: 6px
       position: absolute
       top: 5px
       width: 4px
-      +border-radius(50%)
 
   .ui-datepicker-prev
     background: image-url('futurico/datepicker/back.png') 5px 3px no-repeat
