--- a/app/assets/stylesheets/modules/dark/equalizer.css.sass
+++ b/app/assets/stylesheets/modules/dark/equalizer.css.sass
@@ -4,12 +4,12 @@ $eq-height: 114px
 .equalizer
   .bar
     background-color: #1e1f22
+    border-radius: 10px
     float: left
     height: $eq-height
     margin-right: 6px
     position: relative
     width: 5px
-    +border-radius(10px)
     +box-shadow((inset 0 1px 0 #000, 1px 1px 0 rgba(#fff, .06)))
     +user-select(none)
 
@@ -22,11 +22,11 @@ $eq-height: 114px
 
   // Scale controls slider position
   .scale
+    border-radius: 10px
     bottom: 0
     left: 0
     position: absolute
     width: 100%
-    +border-radius(10px)
     +box-shadow((inset 1px 0 0 rgba(#fff, .4), 1px 1px 1px rgba(#000, .4)))
     +horizontal-gradient(#6c901b, #91b73c)
 
