--- a/app/assets/stylesheets/modules/dark/login-block.css.sass
+++ b/app/assets/stylesheets/modules/dark/login-block.css.sass
@@ -2,10 +2,10 @@
 
 .login-block
   background-color: #141517
+  border-radius: 8px
   color: #fff
   padding: 23px 30px 30px
   position: relative
-  +border-radius(8px)
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
   behavior: url('/assets/vendor/PIE.htc')
 
