--- a/app/assets/stylesheets/modules/dark/pagination.css.sass
+++ b/app/assets/stylesheets/modules/dark/pagination.css.sass
@@ -10,19 +10,19 @@
     &.active
       a
         color: #3e5706
+        text-shadow: 0 1px 0 #fff
         +box-shadow(1px 1px 0 rgba(#000, .2))
-        +text-shadow(0 1px 0 #fff)
         +vertical-gradient(#fdfdfd, #9e9e9e)
   a
+    border-radius: 50%
     color: #fff
     display: block
     height: 17px
     padding-top: 4px
     text-decoration: none
+    text-shadow: 1px 1px 0 rgba(#000, .4)
     width: 21px
-    +border-radius(50%)
     +box-shadow((inset 1px 1px 0 rgba(#000, .3), 1px 1px 0 rgba(#fff, .1)))
-    +text-shadow(1px 1px 0 rgba(#000, .4))
     behavior: url('/assets/vendor/PIE.htc')
     &:hover
       background-color: #3f4147
