--- a/app/assets/stylesheets/modules/dark/tabbox.css.sass
+++ b/app/assets/stylesheets/modules/dark/tabbox.css.sass
@@ -9,13 +9,13 @@
   color: #a8a8a8
   font-size: 13px
   overflow: hidden
-  +text-shadow(0 1px 0 rgba(#000, .2))
+  text-shadow: 0 1px 0 rgba(#000, .2)
   li
+    border-radius: 10px 10px 0 0
     cursor: pointer
     float: left
     margin-right: 3px
     padding: 12px 60px 9px
-    +border-radius(10px 10px 0 0)
     +box-shadow(inset 0 1px 0 rgba(#fff, .1))
     +vertical-gradient(#5b5d62, #4b4d51)
     +user-select(none)
@@ -28,16 +28,16 @@
     &.active
       color: #404040
       padding-bottom: 12px
+      text-shadow: 0 1px 0 #fff
       +box-shadow(inset 0 1px #fff)
-      +text-shadow(0 1px 0 #fff)
       +vertical-gradient(#e7e7e7, #e5e5e5)
 
 // Tabbox main wrap area with solid background where everything is placed
 .tabbox-stuff
   background-color: #e5e5e5
+  border-radius: 0 10px 10px
   padding: 14px
   position: relative
-  +border-radius(0 10px 10px)
   behavior: url('/assets/vendor/PIE.htc')
 
 // Tabbox icons to navigate inside (sub-navigation)
