--- a/app/assets/stylesheets/modules/dark/user-slug.css.sass
+++ b/app/assets/stylesheets/modules/dark/user-slug.css.sass
@@ -3,10 +3,10 @@
 .user-slug
   .slug-avatar
     border: 4px solid #141517
+    border-radius: 2px
     float: left
     height: 29px
     margin-right: 16px
-    +border-radius(2px)
     +box-shadow((inset 0 1px 0 #0a0a0b, 0 1px 0 rgba(#fff, .06)))
 
   .slug-name
@@ -19,13 +19,13 @@
     padding-left: 16px
     position: relative
     &:before
+      border-radius: 50%
       content: ''
       height: 4px
       left: 3px
       position: absolute
       top: 4px
       width: 4px
-      +border-radius(50%)
 
     &.online
       color: #96bd40
