--- a/app/assets/stylesheets/framework/mixins.css.sass
+++ b/app/assets/stylesheets/framework/mixins.css.sass
@@ -46,6 +46,8 @@
     color: $color
   &::-webkit-input-placeholder
     color: $color
+  &.placeholder
+    color: $color
 
 =transition($properties)
   -webkit-transition: $properties
