Centering vertically header bullit

--- a/app/assets/stylesheets/modules/dark/header.css.sass
+++ b/app/assets/stylesheets/modules/dark/header.css.sass
@@ -40,9 +40,10 @@
       border-radius: 50%
       content: ''
       height: 4px
+      margin-top: -2px
       position: absolute
       right: -4px
-      top: 43%
+      top: 50%
       width: 4px
     &:last-child
       &:after
