Give W3C validator some love

--- a/app/views/static/futurico/_tabbox.html.haml
+++ b/app/views/static/futurico/_tabbox.html.haml
@@ -21,44 +21,44 @@
               Archived data
               %span.status-message.negative No connection
             .preloader
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
+          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
 
         #tabbox-messages
           .heading
             %h2
               Inbox messages
               %span.status-message.positive 2 new
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
+          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
 
         #tabbox-cloud
           .heading
             %h2
               Files inside the cloud
               %span.status-message Total: 91,819,826
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
+          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
 
   -# Option 2 tabbox
   .tabbox-stuff.clearfix
     %ul.tabbox-navigation
       %li.archive
-        %a{:href => "#tabbox-archive"}
+        %a{:href => "#tabbox-archive-2"}
       %li.messages
-        %a{:href => "#tabbox-messages"}
+        %a{:href => "#tabbox-messages-2"}
 
     .last-col
       .tabbox-content
-        #tabbox-archive
+        #tabbox-archive-2
           .heading
             %h2
               Archived data
               %span.status-message.negative No connection
             .preloader
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
+          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
 
-        #tabbox-messages
+        #tabbox-messages-2
           .heading
             %h2
               Inbox messages
               %span.status-message.positive 2 new
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
+          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
 
