--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -2,11 +2,11 @@
 %html{:lang => "en-US"}
   %head
     %meta{:charset => "UTF-8"}
-      %title Scaffy framework
-      = stylesheet_link_tag "futurico-dark"
-      = javascript_include_tag "application"
+    %title Scaffy framework
+    = stylesheet_link_tag "futurico-dark"
+    = javascript_include_tag "application"
   %body
-    %img.background-light{:src => "/assets/futurico/background-light.png"}
+    %img.background-light{:src => "/assets/futurico/background-light.png", :alt => ""}
 
     .container
       = render :partial => "static/futurico/header"
