--- a/app/assets/stylesheets/framework/base.css.sass
+++ b/app/assets/stylesheets/framework/base.css.sass
@@ -1,5 +1,5 @@
-@import 'reset'
-@import 'grids'
-@import 'spaces'
-@import 'type'
+@import 'reset.css.sass'
+@import 'grids.css.sass'
+@import 'spaces.css.sass'
+@import 'type.css.sass'
 
