--- a/app/assets/stylesheets/framework/spaces.css.sass
+++ b/app/assets/stylesheets/framework/spaces.css.sass
@@ -1,4 +1,4 @@
-@import 'config'
+@import 'config.css.sass'
 
 /**
  * Should be used to modify the default spacing between objects (not between nodes of the same object)
