--- a/app/assets/stylesheets/modules/dark/appreciate.css.sass
+++ b/app/assets/stylesheets/modules/dark/appreciate.css.sass
@@ -1,4 +1,4 @@
-@import '../../framework/config'
+@import '../../framework/config.css.sass'
 
 .appreciate
   background: image-url('futurico/appreciate/splash.png') 0 0 no-repeat
